--- a/src/app/modals/editar-perfil.modal.html
+++ b/src/app/modals/editar-perfil.modal.html
@@ -1,29 +1,33 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar color="primary">
     <ion-title>Editar Perfil</ion-title>
     <ion-buttons slot="end">
-      <ion-button (click)="cerrar()">Cerrar</ion-button>
+      <ion-button fill="clear" (click)="cerrar()">Cerrar</ion-button>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
-<ion-content class="ion-padding">
-  <ion-item>
-    <ion-label position="floating">Nombre</ion-label>
-    <ion-input [(ngModel)]="nombre"></ion-input>
-  </ion-item>
+<ion-content class="ion-padding editar-perfil-content">
 
-  <ion-item>
-    <ion-label position="floating">Apellido</ion-label>
-    <ion-input [(ngModel)]="apellido"></ion-input>
-  </ion-item>
+  <form (submit)="guardarCambios()" novalidate>
+    <ion-item>
+      <ion-label position="floating" color="primary">Nombre</ion-label>
+      <ion-input [(ngModel)]="nombre" name="nombre" required></ion-input>
+    </ion-item>
 
-  <ion-item>
-    <ion-label position="floating">Número</ion-label>
-    <ion-input [(ngModel)]="numero"></ion-input>
-  </ion-item>
+    <ion-item>
+      <ion-label position="floating" color="primary">Apellido</ion-label>
+      <ion-input [(ngModel)]="apellido" name="apellido" required></ion-input>
+    </ion-item>
 
-  <ion-button expand="block" class="ion-margin-top" (click)="guardarCambios()">
-    Guardar Cambios
-  </ion-button>
+    <ion-item>
+      <ion-label position="floating" color="primary">Número</ion-label>
+      <ion-input [(ngModel)]="numero" name="numero" type="tel" required></ion-input>
+    </ion-item>
+
+    <ion-button type="submit" expand="block" class="ion-margin-top guardar-btn">
+      Guardar Cambios
+    </ion-button>
+  </form>
+
 </ion-content>
