--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -37,6 +37,9 @@
 
         <div class="button-group">
           <ion-button expand="block" type="submit" class="main-button">Iniciar Sesión</ion-button>
+          <ion-button expand="block" fill="clear" color="medium" routerLink="/recuperar-password">
+            ¿Olvidaste tu contraseña?
+          </ion-button>
           <ion-button expand="block" fill="clear" routerLink="/register">¿No tienes cuenta? Regístrate</ion-button>
           <ion-button expand="block" fill="outline" (click)="entrarComoInvitado()">Entrar como invitado</ion-button>
         </div>
